# chat-prism

./: .gitignore  1.py  Cargo.toml  about-me.md  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: local-agent-contract.yml
.workflow-local/: AGENT_RUNTIME_REPLACEMENT_WORKFLOW.md  ARCHIVE.md  CHAT_COMPLETIONS_AGENT_MIGRATION_PLAN.md  CHAT_COMPLETIONS_AGENT_REGRESSION_CHECKLIST.md  CITATION_ARGUMENT_WORKFLOW.md  CITATION_QUERY_SCORING_WORKFLOW.md  CLAUDE_CODE_FORK_VALUE_MAP.md  ISSUES_WRITING_AGENT_V2.md  LOCAL_AGENT_DEVELOPMENT_PLAN.md  LOCAL_AGENT_EXECUTABLE_ISSUES.md  NEXT_STEPS.md  PHASE_STATUS.md  README.md  RELEASE_CHECK_2026-03-28.md  SESSION_LOG.md  SETTINGS_AUDIT_2026-03-28.md  SETTINGS_WORKFLOW.md  TASK_BOARD.md  claude-code-agent-study.md  claude-code-executive-summary.md  implementation-roadmap.md  plan.md  settings_contract.md
apps/desktop/: package.json
apps/desktop/scripts/: agent-workflow-smoke.ts  apply-citation-labels.ts  auto-label-citation-top1.ts  check-citation-eval-samples.ts  citation-calibrate-pipeline.ts  evaluate-citation-debug.ts  generate-citation-label-template.ts  merge-citation-eval-samples.ts  release-check-desktop.ts  sync-citation-thresholds.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/agent-cli/src/: output.rs
crates/agent-core/src/: event_sink.rs  events.rs  turn_engine.rs
docs/plans/: 2026-04-12-agent-loop-guard.md
docs/superpowers/: crates-agent-handoff.md
tests/: file_analysis.rs
tests/acceptance/: README.md
(+169 files in other folders)
