[workspace]
members = [
    "crates/agent-core",
    "crates/agent-cli",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
